# beyond-long-context

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  main.py  pyproject.toml  wandb_logger.py
data_gen/: README.md  bucket_plan.txt  main.py  setup.cfg
data_gen/configs/: bucket_demo_lanes.yaml  bucket_demo_tokens.yaml  bucket_shape_flash_tokens.yaml  bucket_spatial_ngram8_lanes.yaml  bucket_spatial_ngram8_tokens.yaml  bucket_spatial_uniform_eval_lanes.yaml  bucket_spatial_uniform_eval_smoke_lanes.yaml  bucket_spatial_uniform_eval_smoke_tokens.yaml  bucket_spatial_uniform_eval_tokens.yaml  bucket_spatial_uniform_lanes.yaml  bucket_spatial_uniform_lanes_v2.yaml  bucket_spatial_uniform_tokens.yaml  bucket_spatial_uniform_tokens_v2.yaml  buckets.yaml  buckets_mini.yaml  buckets_spatial_lanes.yaml  buckets_spatial_lanes_mini.yaml  buckets_spatial_lanes_test.yaml  buckets_spatial_mini.yaml  buckets_spatial_tokens.yaml  buckets_spatial_tokens_mini.yaml  buckets_spatial_tokens_test.yaml
data_gen/docs/: manifest_formats.md
data_gen/examples/: demo.py  template_conveyor.yaml  template_conveyor_interleaved.yaml  template_conveyor_letters.yaml  template_conveyor_multi.yaml  template_conveyor_single_belt.yaml  template_conveyor_spatial.yaml  template_conveyor_spatial_test.yaml  template_conveyor_two.yaml  template_locker.yaml  template_locker_people.yaml  template_locker_people_items.yaml  template_locker_people_lockers.yaml  template_locker_people_lockers_items.yaml  template_locker_two_groups.yaml  template_shape_flash.yaml  template_sorting_hub.yaml  template_sorting_hub_2.yaml  template_sorting_hub_3.yaml  template_sorting_hub_8.yaml
data_gen/hf/: package_for_hf.py
data_gen/rule_discovery/: automaton.py  config.py  discover.py  entropy.py  generator.py  reporting.py  rules.py  simulate.py
data_gen/seq2vid/: __init__.py  bucket_cli.py  buckets.py  gen_cli.py  gen_spatial_cli.py  generate.py  render.py  render_cli.py  simple_letter_renderer.py  template_utils.py  validate.py
data_gen/tests/: test_bucket_generation.py  test_bucket_validation.py  test_entropy.py  (+4 more)
datasets/: __init__.py  patternvideos_manifest.py
extras/: NATURAL_DATASET.md  README.md  run_anomaly_eval.py  run_multi_question.py
flops_estimator/: AUDITS.md  README.md  __init__.py  _resize_helpers.py  elementwise.py  flops_all_models.py  flops_glm_minicpm.py  flops_internvl.py  flops_longvila_mimo_phi.py  flops_qwen.py  measurement_vs_prediction_rows.csv  measurement_vs_prediction_summary.csv  measurement_vs_prediction_worst.csv  validate.py
frame_samplers/: __init__.py  base_sampler.py  internvl_sampler.py  longvila_sampler.py  m3_agent_sampler.py  minicpm_v_2_6_sampler.py  minicpm_v_4_5_sampler.py  phi_sampler.py  qwen3_omni_sampler.py  qwen_sampler.py  simple_all_frames_sampler.py  timechat_sampler.py
metrics/: curve_fitting.py  flops_calc.py  flops_validation.py
models/: base_interface.py  claude_api.py  device_map_utils.py  dummy_eval.py  glm45v.py  internvl_3_5.py  longvila.py  mimo_vl.py  minicpm_v_2_6.py  minicpm_v_4_5.py  openrouter_api.py  phi_4_mm.py  qwen2_5_vl.py  qwen3_omni.py  qwen3_vl.py  timechat.py
processors/: __init__.py  question_processor.py  sequence_processor.py  text_to_video_processor.py  video_processor.py
tests/: conftest.py  state_restore_utils.py  test_flop_profile_models.py  test_fps_coalesce.py  test_glm45v_state_restore.py  test_m3_agent_state_restore.py  test_minicpm_state_restore.py  test_oom_restart.py  test_question_log_csv.py  test_question_processor.py  test_qwen3_omni_state_restore.py  test_qwen_full_state_restore.py  test_qwen_sampler.py  test_sequence_manifest_loader.py  test_sequence_processor.py  test_timechat_state_restore.py
training/: README.md  configs.json  main.py  pyproject.toml
training/calibrated_memory/: __init__.py
training/calibrated_memory/backend/: __init__.py
training/calibrated_memory/backend/decoder/: __init__.py  decoder.py  losses.py
training/calibrated_memory/backend/decoder/modules/: __init__.py  rotary.py
training/calibrated_memory/backend/models/: __init__.py  backend_base.py  backends_utils.py  deltaformer_backend.py  deltanet_backend.py  fla_backend.py  gated_deltanet_backend.py  gla_backend.py  identity.py  log_linear_mamba_backend.py  lt_ct.py  mamba_backend.py  mann.py  memory_mosaic_backend.py  mom_backend.py  retnet_backend.py  rwkv_backend.py  simple_rnn.py  titans.py  titans_external.py  transformer_pp_backend.py  ttt_backend.py  ttt_fast_adapter.py
training/calibrated_memory/backend/models/modules/: __init__.py  attention.py  naive_attention.py  normalization.py  positional.py
training/calibrated_memory/backend/models/rwkv7_kernel/: wkv7_op.cpp
training/calibrated_memory/benchmark/: __init__.py  runner.py
training/calibrated_memory/data/: __init__.py
training/calibrated_memory/data/sequences/: __init__.py  collator.py  common.py  metadata_utils.py  question_generator.py  question_importer.py  sequence_generator.py  sources.py
training/calibrated_memory/data/video_features/: __init__.py  backbones.py  dataset.py  frame_sampler.py  pipeline.py  utils.py
training/calibrated_memory/evaluation/: __init__.py  checkpoint.py  dataset.py  runner.py
training/calibrated_memory/metrics/: video.py
training/calibrated_memory/training/: __init__.py  callbacks.py  curriculum.py  data.py  logging.py  registries.py
training/calibrated_memory/utils/: logging.py  paths.py
training/calibrated_memory/valset/: __init__.py  evaluator.py  generation.py  metrics.py
training/scripts/: benchmark_equalizer.py  debug_attention_pipeline.py  debug_overfit_backends.sh  embed_mean.py  embed_merge.py  embed_plan.py  embed_shard.py  finetune_with_gambler.py  generate_val_manifest.py  interactive.py  interactive_low_entropy.py  low_entropy_val.py  report_param_budget.py  run_backend_smokes.sh  run_overfit_mamba.sh  run_validation.py  simple_sequence_benchmark.py
utils/: gpu_monitor.py  memory_utils.py  paths.py  process_cleanup.py  question_csv_logger.py  qwen_memory_fix.py  qwen_utils.py  video_frame_utils.py  vllm_compat.py
(+28 files in other folders)
